fix images width on iphone7

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -233,7 +233,7 @@ input:focus {
 
 @media (min-width: 321px) {
     .dashboard-li .artistsong_image{
-        width: 320px;
+        width: 290px;
     }
 }
 
